--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #15202B;
+  background-image: linear-gradient(to bottom, #15202B, #0D1318);
   color: #fff;
 }
 
